[gd_scene load_steps=2 format=3 uid="uid://wd0vgb7lmm6b"]

[ext_resource type="Script" path="res://modules/characters/enemies/ranger/states/ranger_combat.gd" id="1_ldfuo"]

[node name="RangerCombat" type="Node"]
script = ExtResource("1_ldfuo")

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
